@@ -1,6 +1,9 @@
 package priv.bigant.intranet.client;
 
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.util.Properties;
@@ -10,9 +13,16 @@ import java.util.Properties;
  */
 public class Start {
 
+    private final static Logger LOGGER = LoggerFactory.getLogger(Start.class);
+
     public static void main(String[] args) {
+        boolean b = createdConfig();
+        if (b)
+            new ClientCommunication().start();
+    }
+
+    public static boolean createdConfig() {
         //new Home().showHome();
-        String userPath = System.getProperty("user.dir");
         FileInputStream inputStream = null;
         try {
             inputStream = new FileInputStream(Start.class.getResource("/conf.properties").getPath());
@@ -20,11 +30,17 @@ public class Start {
             Properties properties = new Properties();
             properties.load(inputStream);
             String hostName = properties.getProperty("hostName");
-            String port = properties.getProperty("port");
-            System.out.println("请求穿透域名" + hostName + "本地端口" + port);
-            new ThroughThread(hostName, 45678, hostName, new Integer(port)).start();
+            String localPort = properties.getProperty("localPort");
+            String localHost = properties.getProperty("localHost");
+            ClientConfig clientConfig = (ClientConfig) ClientConfig.getConfig();
+            clientConfig.setHostName(hostName);
+            clientConfig.setLocalHost(localHost);
+            clientConfig.setDomainName(hostName);
+            clientConfig.setLocalPort(Integer.valueOf(localPort));
+            LOGGER.info("请求穿透域名" + hostName + "本地端口" + localPort);
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.error("config file error", e);
+            return false;
         } finally {
             if (inputStream != null) {
                 try {
@@ -34,5 +50,6 @@ public class Start {
                 }
             }
         }
+        return true;
     }
 }
